--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.15.2",
     "multer": "^1.3.0",
+    "mysql": "^2.13.0",
     "pug": "^2.0.0-beta.12"
   },
   "devDependencies": {},
